[package]
name = "nodejs_argon2_rust"
version = "0.1.0"
description = "Argon2 implementation in Rust as Node.js native addon"
authors = ["Ozan Müyesseroğlu <ozanmuyes@gmail.com>"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
